--- a/04-MultipleReg.Rmd
+++ b/04-MultipleReg.Rmd
@@ -1,7 +1,6 @@
 # Multiple Regression {#multiple-reg}
 
 
-
 We can extend the discussion from chapter \@ref(linreg) to more than one explanatory variable. For example, suppose that instead of only $x$ we now had $x_1$ and $x_2$ in order to explain $y$. Everything we've learned for the single variable case applies here as well. Instead of a regression *line*, we now get a regression *plane*, i.e. an object representable in 3 dimenions: $(x_1,x_2,y)$.
 As an example, suppose we wanted to explain how many *miles per gallon* (`mpg`) a car can travel as a function of its *horse power* (`hp`) and its *weight* (`wt`). In other words we want to estimate the equation
 
@@ -106,7 +105,25 @@ We cannot have variables which are *linearly dependent*, or *perfectly colinear*
 
 
 
+## Low Wage Equation
 
+Back to our wage dataset from the previous chapter. Let's add more explanatory variables to this relationship. For instance, what's the impact of experience in the labor market, and time spent with the current employer? Let's first look at how those variables co-vary with log wages:
+
+```{r corrplot}
+data("wage1", package = "wooldridge")
+cmat = round(cor(subset(wage1,select = c(lwage,educ,exper,tenure))),2) # correlation matrix
+corrplot::corrplot(cmat,type = "upper",method = "ellipse")
+```
+
+The way to read the so-called *correlation plot* in figure @\ref(fig:corrplot) is straightforward: each row illustrates the correlation of a certain variable with the other variables. In this example both the shape of the ellipse in each cell as well as their color coding tell us how strongly two variables correlate. Let us put this into a regression model now:
+
+```{r,results = 'asis'}
+educ_only <- lm(lwage ~ educ                 , data = wage1)
+log_wages <- lm(lwage ~ educ + exper + tenure, data = wage1)
+stargazer::stargazer(educ_only, log_wages,type = "html")
+```
+
+Column (1) refers to model \@ref(eq:log-wage) from the previous chapter, where we only had `educ` as a regressor: we obtain an $R^2$ of 0.186. You can see that by adding more regressors in column (2), the quality of our fit increases, as more of the variation in $y$ is now accounted for by our model.
 
 
 ## California Test Scores 2
@@ -150,89 +167,39 @@ Caschool %>%
 
 While you explore this plot, ask yourself the following question: if you could only choose one of the two explanatory variables in our model (that is, either $str$ or $computer$) to predict the value of a given school's average test score, which one would you choose? Why? Discuss this with your classmates.
 
-
-## Interactions {#mreg-interactions}
-
-Interactions allow that the *ceteris paribus* effect of a certain regressor, `str` say, depends also on the value of yet another regressor, `computer` for example. In other words, do test scores depend differentially on the student teacher ratio, depending on wether there are many or few computers in a given school? Is `str` *particularly* important for the test score if there are only a few computers available, for instance? Notice that `str` and `computer` in isolation cannot answer that question (because the value of other variables is assumed *fixed*!). To measure such an effect, we would reformulate our model like this:
-
-
-\begin{equation}
-\text{testscr}_i = b_0 + b_1  \text{str}_i + b_2  \text{computer}_i + b_3 (\text{str}_i \times  \text{computer}_i)+ e_i (\#eq:caschool-inter)
-\end{equation}
-
-
-The inclusion of the *product* of `str` and `computer` amounts to having different slopes with respect to `str` for different values of  `computer` (and vice versa). This is easy to see if we take the partial derivative of \@ref(eq:caschool-inter) with respect to `str`:
-
-\begin{equation}
-\frac{\partial \text{testscr}_i}{\partial \text{str}_i} = b_1 + b_3 \text{computer}_i (\#eq:caschool-inter-deriv)
-\end{equation}
-
-
->You should go back to equation \@ref(eq:abline2d-deriv) to remind yourself of what a *partial effect* was, and how exactly the present \@ref(eq:caschool-inter-deriv) differs from what we saw there.
-
-
-Back in our `R` session, we can run the full interactions model like this:
-
-```{r}
-fit_inter = lm(formula = testscr ~ str + computer + str*computer, data = Caschool)
-# note that this would produce the same result:
-# lm(formula = testscr ~ str*computer, data = Caschool)
-# R expands str*computer for you in main effects + interactions
-summary(fit_inter)
-```
-
-We see here that the regression now estimates and additional coefficient $b_3$ for us. We observe also that the estimate of $b_2$ changes signs and becomes positive, while the interaction effect $b_3$ is negative. This means that an increase in `str` reduces average student scores (more students per teacher make it harder to teach effectively); that an additional computer increases the average test score by 0.05 points; and that the interaction of both decreases scores, implying that more students per teacher decrease scores slightly more if there are more computers.
-
-Looking at our visualization may help understand this result better. Figure \@ref(fig:3D-Plotly-inter) shows a plane that is no longer actually a *plane*. It shows a curved surface. You can see that the surface became more flexible in that we could kind of *bend* it more. Which model do you like better to explain this data? 
-
-```{r 3D-Plotly-inter, echo = FALSE, warning=F, message = F,fig.cap='Californa Test Scores vs student/teach ratio and computers in school plus interaction term'}
-
-df["pred"] <- predict.lm(fit_inter, df, se.fit = F)
-surf <- acast(df, computer ~ str)
-
-color <- rep(0, length(df))
-
-Caschool %>%
-  plot_ly(colors = "blue") %>%
-  add_markers(x = ~str, y = ~computer, z = ~testscr, name = "Data", hoverinfo = "skip", opacity = .6, marker=list(color = 'red', size = 4)) %>%
-  add_surface(x = to_plot_x, y = to_plot_y, z = ~surf, inherit = F, name = "Best Fit Plane with Interaction", opacity = .75, cauto = F, surfacecolor = color) %>%
-  hide_colorbar()
-
-```
-
 ## How To Make Predictions {#make-preds}
 
 It's useful to know how to make a *prediction*, using a regression model like the one in \@ref(eq:caschool-inter). Looking back at this expression, remember that the OLS procedure gives us *estimates* for the values $b_0,b_1, b_2$. With those in hand, it is straightforward to make a prediction about the *conditional mean* of the outcome `testscr` - just plug in the desired numbers for `str` and `computer`. Suppose you want to know what the mean of `testsrc` is conditional on `str = 20` and `computer = 150`. You'd do
 
 \begin{align}
-E[\text{testscr}|\text{str}=20,\text{computer}=150] &= b_0 + b_1  20 + b_2  150 + b_3 (20 \times  150) \\
-&= `r round(coef(fit_inter) %*% c(1,20,150,20*150),2)`.
+E[\text{testscr}|\text{str}=20,\text{computer}=150] &= b_0 + b_1  20 + b_2  150 \\
+&= `r round(coef(fit_inter) %*% c(1,20,150),2)`.
 \end{align}
 
 I computed the last line directly with
 
 ```{r,eval=FALSE}
-x = c(1,20,150,20*150)  # 1 for intercept
+x = c(1,20,150)  # 1 for intercept
 pred = coef(fit_inter) %*% x
 ```
 
 but `R` has a more complete prediction interface. For starters, you can predict the model on all data points which were contained in the dataset we used for estimation, i.e. `Caschool` in our case:
 
 ```{r}
-head(predict(fit_inter))  # first 6 observations of Caschool as predicted by our model
+head(predict(fit_multivariate))  # first 6 observations of Caschool as predicted by our model
 ```
 
 Often you want to add that prediction *to* the original dataset:
 
 ```{r}
-ca_prediction = cbind(Caschool, prediction = predict(fit_inter))
+ca_prediction = cbind(Caschool, prediction = predict(fit_multivariate))
 head(ca_prediction[, c("testscr","computer","str","prediction")])
 ```
 
 You'll remember that we called the distance in prediction and observed outcome our *residual* $e$. Well here this is just `testscr - prediction`. Indeed, $e$ is such an important quantity that `R` has a convenient method to compute $y - \hat{y}$ from an `lm` object directly - the method `resid`. Let's add another column to `ca_prediction`: 
 
 ```{r}
-ca_prediction = cbind(ca_prediction, residual = resid(fit_inter))
+ca_prediction = cbind(ca_prediction, residual = resid(fit_multivariate))
 head(ca_prediction[, c("testscr","computer","str","prediction","residual")])
 ```
 
@@ -242,3 +209,4 @@ Using the data in `ca_prediction`, you should now check for yourself what we alr
 1. What is the average of `prediction`?
 1. How does this compare to the average of the outcome `testscr`?
 1. What is the correlation between `prediction` and `residual`?
+
